--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,39 @@
-.header{
+* {
+    font-family: 'Ubuntu',sans-serif; 
+}
+
+.logo {
+    height: 50px;
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+
+
+.links {
+    display: flex;
+    align-items: center;
+    padding: 10px 5px;
+
+}
+
+.links:hover {
+    background-color:#1565c0;
+    border-radius: 5px;
+}
+
+.icon {
+    padding-right: 5px;
+}
+
+
+
+
+
+
+/* .header{
     background-color: #1976d2;
     display:flex;
     align-items: center;
@@ -79,4 +114,4 @@
     flex:1;
     margin-right:2rem;
     padding:20px 8px;
-}
+} */
