--- a/src/Header.css
+++ b/src/Header.css
@@ -11,7 +11,6 @@
 }
 
 
-
 .links {
     display: flex;
     align-items: center;
@@ -20,8 +19,9 @@
 }
 
 .links:hover {
-    background-color:#1565c0;
+    background-color:#283593;
     border-radius: 5px;
+    font-weight: 600;
 }
 
 .icon {
