--- a/src/Header.css
+++ b/src/Header.css
@@ -14,9 +14,10 @@
 .links {
     display: flex;
     align-items: center;
-    padding: 10px 5px;
+    padding: 10px 3px;
     text-decoration:none;
     color:white;
+    margin-right:20px;
 
 }
 
@@ -31,6 +32,7 @@
 .router__link{
     text-decoration: none;
     color:white;
+    margin-left:-3px;
 }
 .router__link:hover{
     color:white;
@@ -38,7 +40,7 @@
 }
 
 .icon {
-    padding-right: 5px;
+    padding-right: 2.5px;
 }
 
 
