--- a/src/PatientSidebarRow.css
+++ b/src/PatientSidebarRow.css
@@ -1,7 +1,7 @@
 .sidebarRow {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 15px 10px;
     cursor: pointer;
     border-bottom: 1px solid lightgray;
 }
